appId: com.anonymous.peel-app
---
- launchApp
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Open in \"Expo Go\"?"
    commands:
      - tapOn: "Open"
      - waitForAnimationToEnd
- waitForAnimationToEnd
# Go to History tab
- tapOn:
    point: "70%,95%"
- waitForAnimationToEnd
- waitForAnimationToEnd
# Tap My Pantry tab
- tapOn:
    id: "pantry-tab"
- waitForAnimationToEnd
- takeScreenshot: "screen-pantry"
